cabal-version: 1.12

name:           micron-example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/davidaf3/micron#readme>
homepage:       https://github.com/davidaf3/micron#readme
bug-reports:    https://github.com/davidaf3/micron/issues
author:         davidaf3
license:        MIT
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/davidaf3/micron

library
  exposed-modules:
      Micron.Example.Auth
      Micron.Example.Db
      Micron.Example.Utils
      Micron.Example.Crypto
      Micron.Example.Config
      Micron.Example.Resource.User.Model
      Micron.Example.Resource.User.Service
      Micron.Example.Resource.User.Filters
      Micron.Example.Resource.UserToken.Model
      Micron.Example.Resource.UserToken.Service
      Micron.Example.Resource.Post.Model
      Micron.Example.Resource.Post.Service
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  default-extensions:
      ImportQualifiedPost
      DeriveGeneric
      TupleSections
      GADTs
      MultiParamTypeClasses
      TypeSynonymInstances
      FlexibleInstances
  build-depends:
      micron
    , aeson >=2.2
    , base >=4.7 && <5
    , bytestring
    , containers
    , selda
    , selda-sqlite
    , text
    , uuid
    , password
  default-language: Haskell2010

executable micron-example
  main-is: src/Main.hs
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      ImportQualifiedPost
  build-depends:
      micron
    , micron-example
    , base >=4.7 && <5
    , warp
  default-language: Haskell2010
