cabal-version: 1.12

name:           micron-example
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/davidaf3/micron#readme>
homepage:       https://github.com/davidaf3/micron#readme
bug-reports:    https://github.com/davidaf3/micron/issues
author:         davidaf3
license:        MIT
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/davidaf3/micron

library
  exposed-modules:
      Micron.Example.Auth
      Micron.Example.Session
      Micron.Example.Db
      Micron.Example.Utils
      Micron.Example.Crypto
      Micron.Example.Resource.User.Model
      Micron.Example.Resource.User.Service
      Micron.Example.Resource.User.Filters
      Micron.Example.Resource.UserToken.Model
      Micron.Example.Resource.UserToken.Service
      Micron.Example.Resource.Post.Model
      Micron.Example.Resource.Post.Service
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  default-extensions:
      ImportQualifiedPost
      DeriveGeneric
      TupleSections
      GADTs
      MultiParamTypeClasses
      TypeSynonymInstances
      FlexibleInstances
      FlexibleContexts
      DataKinds
      OverloadedLabels
  build-depends:
      micron
    , micron-polysemy
    , aeson >=2.2
    , base >=4.7 && <5
    , bytestring
    , containers
    , selda
    , selda-sqlite
    , text
    , uuid
    , password
    , stm
    , polysemy
    , wai
    , http-types
  default-language: Haskell2010

executable micron-example
  main-is: src/Main.hs
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  default-extensions:
      ImportQualifiedPost
      DataKinds
      TypeApplications
  build-depends:
      micron
    , micron-example
    , micron-polysemy
    , base >=4.7 && <5
    , warp
    , stm
    , polysemy
  default-language: Haskell2010

test-suite micron-example-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base >=4.7 && <5
    , micron-example
    , micron-polysemy
    , hspec
    , polysemy
    , selda
    , selda-sqlite
  default-language: Haskell2010
